# py_volvo_connected

./: .coveragerc  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  all_requirements.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.build/: README.md  add_data_objects.py  connected-vehicle-c3-specification_original.json  volvo_connected_specs.json
.devcontainer/: devcontainer.json
.github/workflows/: publish.yaml
docs/: conf.py  index.rst
src/volvo_connected/: __init__.py  skeleton.py
src/volvo_connected/authentication/: __init__.py  dynamic_access_token_provider.py  static_access_token_provider.py  volvo_authentication_provider.py
src/volvo_connected/vcclient/: kiota-lock.json  volvo_connected_client.py
src/volvo_connected/vcclient/models/: brake_status.py  brake_status_data.py  command_accessibility.py  command_accessibility_data.py  command_list_item.py  command_list_item_command.py  command_list_response.py  descriptions.py  diagnostics.py  diagnostics_data.py  doors.py  doors_data.py  engine_diagnostics.py  engine_diagnostics_data.py  engine_start_request.py  engine_status.py  engine_status_data.py  error.py  error_response.py  exterior_warning.py  exterior_warning_data.py  fuel_amount.py  fuel_amount_data.py  images.py  invoke.py  invoke_data.py  invoke_data_invoke_status.py  invoke_unlock.py  invoke_unlock_data.py  invoke_unlock_data_invoke_status.py  odometer_value.py  odometer_value_data.py  r_instance.py  r_instance_with_unit.py  resource_instance_float.py  resource_instance_integer.py  resource_instance_string.py  statistic_response.py  statistic_vals.py  tyre_pressure.py  (+7 more)
src/volvo_connected/vcclient/vehicles/: vehicles_request_builder.py
src/volvo_connected/vcclient/vehicles/item/: with_vin_item_request_builder.py
src/volvo_connected/vcclient/vehicles/item/brakes/: brakes_request_builder.py
src/volvo_connected/vcclient/vehicles/item/command_accessibility/: command_accessibility_request_builder.py
src/volvo_connected/vcclient/vehicles/item/commands/: commands_request_builder.py
src/volvo_connected/vcclient/vehicles/item/commands/climatization_start/: climatization_start_request_builder.py
src/volvo_connected/vcclient/vehicles/item/commands/climatization_stop/: climatization_stop_request_builder.py
src/volvo_connected/vcclient/vehicles/item/commands/engine_start/: engine_start_request_builder.py
src/volvo_connected/vcclient/vehicles/item/commands/engine_stop/: engine_stop_request_builder.py
src/volvo_connected/vcclient/vehicles/item/commands/flash/: flash_request_builder.py
src/volvo_connected/vcclient/vehicles/item/commands/honk/: honk_request_builder.py
src/volvo_connected/vcclient/vehicles/item/commands/honk_flash/: honk_flash_request_builder.py
src/volvo_connected/vcclient/vehicles/item/commands/lock/: lock_request_builder.py
src/volvo_connected/vcclient/vehicles/item/commands/lock_reduced_guard/: lock_reduced_guard_request_builder.py
src/volvo_connected/vcclient/vehicles/item/commands/unlock/: unlock_request_builder.py
src/volvo_connected/vcclient/vehicles/item/diagnostics/: diagnostics_request_builder.py
src/volvo_connected/vcclient/vehicles/item/doors/: doors_request_builder.py
src/volvo_connected/vcclient/vehicles/item/engine/: engine_request_builder.py
src/volvo_connected/vcclient/vehicles/item/engine_status/: engine_status_request_builder.py
src/volvo_connected/vcclient/vehicles/item/fuel/: fuel_request_builder.py
src/volvo_connected/vcclient/vehicles/item/odometer/: odometer_request_builder.py
src/volvo_connected/vcclient/vehicles/item/statistics/: statistics_request_builder.py
src/volvo_connected/vcclient/vehicles/item/tyres/: tyres_request_builder.py
src/volvo_connected/vcclient/vehicles/item/warnings/: warnings_request_builder.py
src/volvo_connected/vcclient/vehicles/item/windows/: windows_request_builder.py
tests/: conftest.py  test_skeleton.py  test_vehicles.py
