[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[project]
name = "volvo-connected"
version = "0.1.0"
description = "A Python package for interacting with Volvo Connect API."
authors = [{name = "Stephan van Rooij", email="github@svrooij.io"}]
dependencies = [
  "microsoft-kiota-bundle>=1.6.8"
]
license = {file = "LICENSE"}
readme = "README.md"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-asyncio",
  "requests-mock",
  "requests",
  "setuptools",
  "twine",
  "wheel",
]